# climeleon

./: Jenkinsfile  Makefile  README.md  docker-bake.hcl  easy_install.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml
cc-docs/: Dockerfile
cc-openstack/: Dockerfile  clouds-public.yaml  clouds.yaml  clouds2rc  entrypoint.sh  pyproject.toml  requirements.forks.txt  requirements.txt
cc-openstack/climeleon/: cli.py
cc-openstack/climeleon/os_env/: clouds2rc
cc-openstack/python-climeleon/: .gitignore  setup.cfg
cc-openstack/python-climeleon/climeleon/: base.py  network.py  node.py  user.py  util.py
cc-openstack/scripts/: cloud-config-merge  create-enrollment-config  enroll-nodes  floating-ip-status  give-me-a  lease-for-host  lease-nodes  network-segment-status  node-assign-switch-ids  node-enroll  node-port-status  node-switchport  provision-nodes  resource-provider-status
cc-rpm/: Dockerfile
chi-docs/: Dockerfile
chi-openstack/: Dockerfile  clouds2rc  entrypoint.sh  requirements.forks.txt  requirements.txt
chi-openstack/scripts/: cloud-config-merge  floating-ip-status  node-port-status  node-serial-console-status  reservation-for-host  token-inspect
