[metadata]
name = climeleon
summary = Operator library for Chameleon
author = University of Chicago
author-email = systems@lists.chameleoncloud.org
home-page = https://www.chameleoncloud.org
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:

[options.entry_points]
console_scripts =
  network-delete = climeleon.network:NetworkDeleteCommand.main
  network-public-ip-status = climeleon.network:NetworkPublicIPStatusCommand.main
  network-segment-status = climeleon.network:NetworkSegmentStatusCommand.main
  node-assign-switch-ids = climeleon.node:NodeAssignSwitchIDsCommand.main
  node-enroll = climeleon.node:NodeEnrollCommand.main
  node-rotate-ipmi-password = climeleon.node:NodeRotateIPMIPasswordCommand.main
  user-inspect = climeleon.user:UserInspectCommand.main
